Java Test Allure is connected